Update documentation for Maven build